# Multimodal-ppg-health-inference

./: .gitignore  CMakeLists.txt  Dockerfile  READ.md  README.md  pytest.ini  requirements.txt
benchmarks/: run_benchmarks.py
configs/: default.yaml
docs/: embedded_notes.md
drivers/camera/: README.md
drivers/i2c/: README.md
drivers/spi/: README.md
scripts/: export_onnx.py  run_pipeline.py
src/cpp/: main.cpp
src/cpp/acquisition/: i2c_device.cpp  i2c_device.hpp  sensor_simulator.cpp  sensor_simulator.hpp  spi_device.cpp  spi_device.hpp
src/cpp/gpio/: gpio_interrupt.cpp  gpio_interrupt.hpp
src/cpp/signal_processing/: bandpass_filter.cpp  bandpass_filter.hpp  ppg_pipeline.cpp  ppg_pipeline.hpp
src/cpp/sync/: multimodal_sync.cpp  multimodal_sync.hpp  ring_buffer.hpp
src/python/fusion/: __init__.py  concat_fusion.py
src/python/inference/: __init__.py  onnx_engine.py
src/python/io/: __init__.py  cpp_bridge.py
src/python/preprocessing/: __init__.py  ppg_ops.py
tests/: test_integration_pipeline.py  test_signal_processing.py  test_sync_alignment.py
tests/cpp/: test_sync.cpp
